# opencl-demo

./: CMakeLists.txt  README.md
kernel/: CMakeLists.txt  cl2h.cmake  kernel.hpp
kernel/opencl/: grayscale.cl.h  grayscale.cpp  grayscale.hpp  grayscale_fp16.cl  grayscale_fp16.cl.h  grayscale_fp16.h  grayscale_fp32.cl  grayscale_fp32.cl.h  grayscale_fp32.h  kernel.hpp
kernel/opencl/grayscale/: fp16.cl  fp16.h  fp32.cl  fp32.h
samples/: CMakeLists.txt  grayscale-uma.cpp  grayscale.cpp
src/: CMakeLists.txt
src/include/: clc.hpp
src/include/clc/: command_buffer.cpp  command_buffer.hpp  device.hpp  event.cpp  event.hpp  extent.cpp  extent.hpp  kernel.cpp  kernel.hpp  queue.cpp  queue.hpp  resource.hpp  stb_image.cpp  stb_image.hpp
src/include/clc/common/: config.h  config.h.in  defines.hpp  info.cpp  info.hpp
src/include/clc/device/: box.cpp  box.hpp  concepts.hpp  context.cpp  context.hpp  device.cpp  device.hpp  devices.cpp  devices.hpp  helper.cpp  helper.hpp  manager.cpp  manager.hpp  platform.cpp  platform.hpp  props.cpp  props.hpp  queue.cpp  queue.hpp  score.hpp  select.cpp  select.hpp  set.cpp  set.hpp
src/include/clc/helper/: defines.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  format.cpp  format.hpp  math.hpp
src/include/clc/kernel/: box.cpp  box.hpp  concepts.hpp  helper.hpp  manager.cpp  manager.hpp  structs.hpp
src/include/clc/resource/: buffer.cpp  buffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  type.hpp
